[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fize"
version = "0.1.0"
authors = [
    { name="Fize", email="chenfengzhan@qq.com"},
]
description = "fize is a package for python!"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/fizechan/fize"